<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uulm.dbis.coaster2go.activities.EditParkActivity"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/imageViewEditPark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/park_image" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add_park_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            app:fabSize="normal"
            app:layout_anchor="@id/imageViewEditPark"
            app:layout_anchorGravity="bottom|right"
            android:layout_margin="10dp"
            />
    </android.support.design.widget.CoordinatorLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutParkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextParkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutParkLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextParkLocationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/locationName" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutParkLat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextParkLat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/latitude" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutParkLon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextParkLon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/longitude" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/maps"
                android:drawableStart="@drawable/ic_add_location_black_24dp"
                android:drawableLeft="@drawable/ic_add_location_black_24dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutParkDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextParkDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="5" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_save"/>

</LinearLayout>
