<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.uulm.dbis.coaster2go.activities.MyAccountActivity">


    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserName"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextUserName"
        android:layout_marginStart="4dp" />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/buttonSaveUserData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveUserData"
        android:text="@string/button_text_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="74dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
