<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ratingList_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/ratingList_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />


        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingList_rating"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/ratingList_descrText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

</LinearLayout>